--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
+  <script src="https://kit.fontawesome.com/fd4a3466e6.js" crossorigin="anonymous"></script>
   <app-root></app-root>
 </body>
 </html>
